# graphics_play_ground

./: .gitignore  .gitmodules  CMakeLists.txt  install_resources.cpp
clumsy_engine/clumsy_engine/: CMakeLists.txt
clumsy_engine/clumsy_engine/src/: AABB.h  CPU_serial.h  CUDA.cu  CUDA.h  Newton_solver.cpp  Newton_solver.h  Simulation_Data.h  Simulator.cpp  application.cpp  application_event.h  buffer.cpp  buffer.h  camara.cpp  camara_controller.cpp  class_reflect.h  compressed_sparse_row.h  compute_hessian_gradient.h  data_computes.cpp  data_computes.h  data_connections.cpp  data_connections.h  discrete_collision.cpp  discrete_collision.h  discrete_collision_detection.cpp  discrete_collision_detection.h  dispatcher.h  event.h  graphic_context.h  gravity.cpp  gravity.h  handy_helpers.h  helper_utils.h  imgui_layer.cpp  inertial.cpp  inertial.h  input.cpp  input.h  interaction.cpp  interaction.h  key_event.h  (+58 more)
clumsy_engine/clumsy_engine/test/: cloth_sim_test.cpp  data_computes_test.cpp  signal_test.cpp  simulation_data_test.cpp  simulator_test.cpp  spring_stretch_test.cpp  system_equations_solver_test.cpp
clumsy_engine/sand_box/: CMakeLists.txt  main.cpp  sandbox_2D.cpp  sandbox_2D.h  sandbox_app.cpp  shader_sources.h  sim_app.cpp  sim_app.h  ui_map_to_simulation_records.h  ui_simulation_mapper_helpers.h
common/ce_log/: CMakeLists.txt  ce_log.cpp  ce_log.h
common/clumsy_lib/: CMakeLists.txt  clumsy_lib.ixx  dispatchor.ixx  enum_tagged_morphysm.ixx  literal_value.ixx  static_dep_graph.ixx
common/geometry_lib/: CMakeLists.txt  aabb.ixx  bvh.cpp  bvh.ixx  bvh_imp.cpp  geometry_lib.ixx
common/matrix_math/: CMakeLists.txt  main.cpp  matrix.ixx  matrix_math.h  sparse_matrix.ixx
common/parallel_lib/: CMakeLists.txt  parallel.cpp  parallel.ixx  thread_pool.cpp
common/quick_shell/: CMakeLists.txt  GLFW_wrapper.cpp  UI_wrapper.cpp  glfw_wrapper.ixx  glfw_wrapper_imp.cpp  main_window.cpp  main_window.ixx  main_window_imp.cpp  main_window_par.cpp  render.cpp  shader.cpp  ui_component_imp.cpp  ui_components.ixx  ui_event.ixx  vertex_array.cpp
common/sim_lib/: CMakeLists.txt  constraint_kernels.cpp  sim_data.ixx  simulator.cpp  simulator.ixx  simulator_data_update.cpp  simulator_datas.cpp  simulator_imp.cpp  small_mat.cpp  solver.cpp  solver_data_update.cpp  solver_dummy.cpp  struct_functors.cpp
examples/: CMakeLists.txt  main.cpp
examples/cases/: 1_triangle.json  batch_rendering.fs  batch_rendering.vs  gl_render.fs  gl_render.vs  model.fs  model.vs
examples/clumsy_engine/: CMakeLists.txt
examples/clumsy_engine/clumsy_editor/: CMakeLists.txt  editor_app.cpp  editor_layer.cpp  editor_layer.h
examples/clumsy_engine/clumsy_engine/: CMakeLists.txt
examples/clumsy_engine/doc/: clumsy_engine.xmind  simulation.md
examples/clumsy_engine/sand_box/: CMakeLists.txt  sandbox_2D.cpp  sandbox_2D.h  sandbox_app.cpp  sim_app.h
examples/clumsy_engine/unit_test/: AABB_test.cpp  CMakeLists.txt  compute_hessian_gradient_test.cpp  discrete_collision_detection_test.cpp  main.cpp  spring_stretch_test.cpp
examples/gl_render/: CMakeLists.txt  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  test.cpp  test.h  test_batch_rendering.cpp  test_batch_rendering.h  test_clear_color.cpp  test_clear_color.h  test_texture2d.cpp  test_texture2d.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
examples/graphic_app_0/: CMakeLists.txt  app.cpp  app.h  app.ixx  main.cpp  matrix_using.cpp  mouse_picker.cpp  mouse_picker.h  plane_maker.cpp  plane_maker.ixx  plane_stacker.cpp  scene_maker.ixx  simulation_layer.ixx
examples/rigid_body/: CMakeLists.txt  helper.cpp  main.cpp  rigid_body_dynamic.ixx
examples/shellet/: CMakeLists.txt
examples/shellet/shellet/: CMakeLists.txt
examples/shellet/shellet_apps/: CMakeLists.txt
examples/soft_render/: CMakeLists.txt  frame_buffer.h  main.cpp  math.h  out_device.h  rasterizer.h  soft_render.h  soft_render_test.cpp
examples/soft_render_2/: CMakeLists.txt  Camara.cpp  Camara.h  Drawing_Buffer.cpp  Drawing_Buffer.h  GLFW_Wrapper.cpp  GLFW_Wrapper.h  Glfw_Window.cpp  Glfw_Window.h  Imgui_Wrapper.cpp  Imgui_Wrapper.h  OpenGL_Wrapper.cpp  OpenGL_Wrapper.h  Shader.cpp  Shader.h  Spinning_Cube.cpp  Spinning_Cube.h  Spinning_Cube_App.cpp  Spinning_Cube_App.h  dispatcher.h  event.h  graphic_math.h  macro_loop.h  main.cpp  mat.h  member_extractor.h  mesh_loader.cpp  mesh_loader.h  rasterizer.h  serialization.h  shader.cpp  shader.h  soft_render.h  tagged_type.h  test_main.cpp  type_list.h  type_map.h  ui_data_mapper.h
examples/vk_render/: CMakeLists.txt  Hello_VK_Triangle.cpp  Hello_VK_Triangle.h  main.cpp
external_wrappers/imgui/: CMakeLists.txt
external_wrappers/magic_enum/: CMakeLists.txt  dummy.cpp
external_wrappers/stb/: CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
shellet/: CMakeLists.txt
shellet/shellet/: CMakeLists.txt
shellet/shellet/src/: FEM_Simulator.cpp  FEM_Simulator.h  Scene.cpp
shellet/shellet/test/: FEM_Simulator_Test.cpp  Mesh_Loader_Test.h  Topology_Computer_Test.cpp
shellet/shellet_apps/: CMakeLists.txt  main.cpp
shellet/src/: Array.hpp  FEM_Simulator.cpp  FEM_Simulator.h  Mesh_Loader.cpp  Mesh_Loader.h  PD_Simulator.cpp  PD_Simulator.h  Plot_Data_IO.cpp  Plot_Data_IO.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Simulation_Data.h  Simulator.cpp  Simulator.h  Topology_Computer.cpp  Topology_Computer.h  camara.h  predef_types.h
shellet/src/shaders/: plain.vs
shellet/test/: FEM_Simulator_Test.cpp  Mesh_Loader_Test.cpp  Plot_Data_IO_Test.cpp  Scene_Test.cpp  Shader_Test.h  Simulator_Test.cpp  Topology_Computer_Test.cpp  test_main.cpp
unit_test/common/clumsy_lib_test/: CMakeLists.txt  class_reflection_test.cpp  classes_for_get_instance.cpp  classes_for_get_instance.h  copy_struct_test.cpp  dependent_propagator_test.cpp  dispatchor_test.cpp  dynamic_type_map_test.cpp  enum_tagged_morphysm_test.cpp  get_instance_test.cpp  literal_value_test.cpp  macro_loop_test.cpp  (+8 more)
(+257 files in other folders)
